Add support for export multiple currencies rates, do export from GUI.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,5 +38,10 @@
   "devDependencies": {
     "electron": "^1.7.10",
     "electron-builder": "^19.53.6"
+  },
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:3001"
+    }
   }
 }
