--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jade": "~1.11.0",
+    "moment": "^2.20.1",
     "morgan": "~1.9.0",
     "node-fetch": "^1.7.3",
+    "promise": "^8.0.1",
     "serve-favicon": "~2.4.5"
   }
 }
