--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,10 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
+    "redux-observable": "^0.17.0",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "rxjs": "^5.5.6"
   },
   "scripts": {
     "electron-start": "electron .",
