--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.9.0",
     "node-fetch": "^1.7.3",
     "promise": "^8.0.1",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "websocket": "^1.0.25"
   }
 }
