--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,9 @@
     "redux-observable": "^0.17.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
-    "rxjs": "^5.5.6"
+    "reselect": "^3.0.1",
+    "rxjs": "^5.5.6",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "electron-start": "electron .",
