--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest-enzyme": "^4.1.1",
+    "jest-fetch-mock": "^1.4.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.6.4",
