--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
+    "redux-mock-store": "^1.5.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0"
   },
